<resources>
    <string name="app_name">LemonCook</string>
    <string name="loading">로딩중입니다.</string>
    <string name="network_error">네트워크 연결이 원활하지 않습니다.</string>

    <!-- 카카오 -->
    <string name="kakao_app_key">115a1678619d197b26d01941efb28463</string>
    <string name="kakao_scheme">kakao115a1678619d197b26d01941efb28463</string>
    <string name="kakaolink_host">kakaolink</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- SplashActivity -->
    <string name="splashStringText1">It’s Time For Cooking</string>
    <string name="splashStringText2">유명 레시피를 따라 요리해보고, 나만의 레시피를\n기록하고 레시피를 SNS에 공유해보세요</string>
    <string name="splashStringTitle">Lemoncook</string>

    <!-- MainActivity -->
    <string name="main_tab_my_recipe">My Recipe</string>
    <string name="main_tab_star_recipe">Star Recipe</string>
    <!-- MainFragmentMy -->
    <string name="main_fragment_my_plus_recipe">레시피 추가하기</string>
    <string name="main_fragment_my_text">내 레시피를 살펴봐요</string>
    <!-- MainFragmentStar -->
    <string name="main_fragment_star_text">백종원, 김수미 선생님의 요리법을 보고 따라해봐요</string>

    <!-- LoginActivity -->
    <string name="loginWelcome">Welcome</string>
    <string name="loginJoin">회원가입</string>
    <string name="loginFind">아이디/비밀번호찾기</string>
    <string name="loginLogin">로그인</string>
    <string name="loginEmail">이메일</string>
    <string name="loginPassword">비밀번호</string>
    <string name="loginEmailHint">E-mail</string>
    <string name="loginPasswordHint">Password</string>

    <!-- JoinActivity -->
    <string name="joinEmail">이메일</string>
    <string name="joinNickName">닉네임</string>
    <string name="joinPassWord">비밀번호</string>
    <string name="joinPhoneCert">휴대폰인증</string>
    <string name="joinCheckDup">중복확인</string>
    <string name="joinCert">인증</string>
    <string name="joinNickNameHint">Nickname</string>
    <string name="joinComplete">완료</string>

    <!-- AddRecipeActivity -->
    <string name="addRecipeTitle">레시피 추가하기</string>
    <string name="addRecipeNew">새 레시피 등록</string>
    <string name="addRecipeLoad">레시피 가져오기</string>

    <!-- NewRecipeFragment -->
    <string name="newRecipeTitle">Title</string>
    <string name="newRecipeHashTag">Hashtag</string>
    <string name="newRecipeMainImage">MainImage</string>
    <string name="newRecipeRecipeImage">RecipeImage</string>
    <string name="newRecipeIngredient">Ingredient</string>
    <string name="newRecipeLittleTitleHint">소제목을 적어주세요</string>
    <string name="newRecipeFoodNameHint">음식명을 적어주세요</string>
    <string name="newRecipeHashTagHint">#Hashtag 추가 (예, #된장찌개)</string>
    <string name="newRecipeMainImageHint">대표 사진을 설정해 주세요</string>
    <string name="newRecipeRecommend">추천재료</string>
    <string name="newRecipeAllPut">모두 담기</string>
    <string name="newRecipeMaterialHint">재료명 (예, 양파 1개)</string>
    <string name="newRecipeQuantityHint">분량(예,1개)</string>
    <string name="newRecipeStart">시작하기</string>

    <!-- EditRecipe -->
    <string name="editRecipeTitle">내 레시피</string>
    <string name="editRecipeHint">레시피를 작성해 주세요</string>
    <string name="editRecipeAddImage">사진 추가하기</string>

    <!-- MyPage -->
    <string name="myPageTitle">마이페이지</string>
    <string name="myPageMyRecipe">내 등록 레시피</string>
    <string name="myPageGetRecipe">공유받은 레시피</string>
    <string name="myPageZzim">찜 목록</string>

</resources>
