<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".src.join.JoinActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/loginWelcome"
        android:textColor="@color/colorBlack"
        android:textSize="40sp"
        android:layout_marginTop="62dp"></TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="196dp"
        android:textColor="@color/colorBlack"
        android:textSize="12sp"
        android:text="@string/loginEmail"></TextView>

    <EditText
        android:id="@+id/join_et_email"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="216dp"
        android:hint="@string/loginEmailHint"
        android:textColorHint="@color/colorLoginGray"
        android:textSize="16sp"
        android:textColor="@color/colorBlack"
        android:background="@android:color/transparent"
        android:paddingLeft="4dp"
        android:inputType="textEmailAddress"></EditText>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/join_et_email"
        android:background="@color/colorLoginGray"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"></View>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="267dp"
        android:textColor="@color/colorBlack"
        android:textSize="12sp"
        android:text="@string/joinNickName"></TextView>

    <EditText
        android:id="@+id/join_et_nickname"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="287dp"
        android:hint="@string/joinNickNameHint"
        android:textColorHint="@color/colorLoginGray"
        android:textSize="16sp"
        android:textColor="@color/colorBlack"
        android:background="@android:color/transparent"
        android:paddingLeft="4dp"></EditText>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/join_et_nickname"
        android:background="@color/colorLoginGray"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"></View>
    
    <Button
        android:id="@+id/join_btn_check_dup"
        android:layout_width="73dp"
        android:layout_height="36dp"
        android:background="@drawable/round_fill_lemon"
        android:text="@string/joinCheckDup"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="40dp"
        android:layout_marginTop="266dp"></Button>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="338dp"
        android:textColor="@color/colorBlack"
        android:textSize="12sp"
        android:text="@string/joinPassWord"></TextView>

    <EditText
        android:id="@+id/join_et_password"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="358dp"
        android:hint="@string/loginPasswordHint"
        android:textColorHint="@color/colorLoginGray"
        android:textSize="16sp"
        android:textColor="@color/colorBlack"
        android:background="@android:color/transparent"
        android:paddingLeft="4dp"
        android:inputType="textPassword"></EditText>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/join_et_password"
        android:background="@color/colorLoginGray"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"></View>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="408dp"
        android:textColor="@color/colorBlack"
        android:textSize="12sp"
        android:text="@string/joinPhoneCert"></TextView>

    <EditText
        android:id="@+id/join_et_phone_cert"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="431dp"
        android:hint="@string/joinPhoneCert"
        android:textColorHint="@color/colorLoginGray"
        android:textSize="16sp"
        android:textColor="@color/colorBlack"
        android:background="@android:color/transparent"
        android:paddingLeft="4dp"
        android:inputType="phone"></EditText>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/join_et_phone_cert"
        android:background="@color/colorLoginGray"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"></View>

    <Button
        android:id="@+id/join_btn_phone_cert"
        android:layout_width="73dp"
        android:layout_height="36dp"
        android:background="@drawable/round_fill_lemon"
        android:text="@string/joinCert"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="40dp"
        android:layout_marginTop="411dp"></Button>
    
    <Button
        android:id="@+id/join_btn_complete"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="30dp"
        android:background="@drawable/round_fill_gray"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:text="@string/joinComplete"></Button>


</androidx.constraintlayout.widget.ConstraintLayout>