<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".src.splash.SplashActivity">

    <ImageView
        android:id="@+id/splash_iv_main_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="58dp"
        android:src="@drawable/img_splash"/>

    <TextView
        android:id="@+id/splash_tv_text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/splash_iv_main_img"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="47dp"
        android:textColor="@color/colorSplashTextBlack"
        android:textSize="17sp"
        android:text="@string/splashStringText1" />

    <TextView
        android:id="@+id/splash_tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/splash_tv_text1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/colorSplashTitleBlack"
        android:text="@string/splashStringTitle"/>

    <TextView
        android:id="@+id/splash_tv_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/splash_tv_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="24dp"
        android:gravity="center_horizontal"
        android:textColor="@color/colorSplashTextBlack"
        android:textSize="12sp"
        android:text="@string/splashStringText2" />

    <ImageView
        android:id="@+id/splash_iv_next_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:src="@drawable/ic_next"
        android:layout_marginBottom="111dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>