<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    tools:context=".src.addRecipe.AddRecipeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <ImageView
            android:id="@+id/add_recipe_ic_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="30dp"/>

        <TextView
            android:id="@+id/add_recipe_tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/add_recipe_ic_back"
            android:layout_marginLeft="10dp"
            android:text="@string/addRecipeTitle"
            android:textColor="@color/colorLoginBlack"
            android:textSize="16sp"
            android:textStyle="bold"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/add_recipe_tap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/add_recipe_tv_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addRecipeNew"
            android:textColor="@color/colorLoginBlack"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/add_recipe_tv_load"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/addRecipeLoad"
            android:textColor="@color/colorLoginGray"
            android:textSize="14sp"/>

    </LinearLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/add_recipe_vp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>