<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorWhite"
    tools:context=".src.addRecipe.fragments.NewRecipeFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/new_recipe_cl_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent">

                <com.makers.lemoncook.src.VerticalTextView
                    android:id="@+id/new_recipe_vt_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginTop="29dp"
                    android:layout_marginLeft="24dp"
                    android:text="@string/newRecipeTitle"
                    android:textColor="@color/colorMainGray"
                    android:textSize="12sp"/>

                <EditText
                    android:id="@+id/new_recipe_et_little_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="53dp"
                    android:textSize="22sp"
                    android:textColor="@color/colorLoginBlack"
                    android:hint="@string/newRecipeLittleTitleHint"
                    android:textColorHint="@color/colorLoginGray"
                    android:layout_marginTop="21dp"/>

                <EditText
                    android:id="@+id/new_recipe_et_food_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/new_recipe_et_little_title"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="53dp"
                    android:textSize="30sp"
                    android:textColor="@color/colorLoginBlack"
                    android:textColorHint="@color/colorLoginGray"
                    android:textStyle="bold"
                    android:hint="@string/newRecipeFoodNameHint"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/new_recipe_cl_hashtag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/new_recipe_cl_title">

                <com.makers.lemoncook.src.VerticalTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="11dp"
                    android:text="@string/newRecipeHashTag"
                    android:textColor="@color/colorMainGray"
                    android:textSize="12sp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:background="@drawable/round_hashtag_edittext"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="14dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginRight="24dp"
                    android:paddingLeft="9dp"
                    android:hint="@string/newRecipeHashTagHint"
                    android:textColorHint="@color/colorLoginGray"
                    android:textSize="12sp"
                    android:textColor="@color/colorLoginBlack"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/new_recipe_cl_main_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/new_recipe_cl_hashtag">

                <com.makers.lemoncook.src.VerticalTextView
                    android:id="@+id/new_recipe_vt_main_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginTop="24dp"
                    android:layout_marginLeft="24dp"
                    android:text="@string/newRecipeMainImage"
                    android:textColor="@color/colorMainGray"
                    android:textSize="12sp"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="286dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginTop="13dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="24dp"
                    android:background="@color/colorLemon">

                    <ImageView
                        android:id="@+id/new_recipe_iv_main_img"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:visibility="gone"/>

                    <ImageView
                        android:id="@+id/new_recipe_iv_plus_main_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_plus_circle_y"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"/>

                    <TextView
                        android:id="@+id/new_recipe_tv_plus_main_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorWhite"
                        android:textSize="11sp"
                        android:text="@string/newRecipeMainImageHint"
                        app:layout_constraintTop_toBottomOf="@+id/new_recipe_iv_plus_main_image"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        android:layout_marginTop="8dp"/>


                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/new_recipe_cl_recipe_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/new_recipe_cl_main_image"
                android:layout_marginRight="24dp">

                <com.makers.lemoncook.src.VerticalTextView
                    android:id="@+id/new_recipe_vt_recipe_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginTop="27dp"
                    android:layout_marginLeft="24dp"
                    android:text="@string/newRecipeRecipeImage"
                    android:textColor="@color/colorMainGray"
                    android:textSize="12sp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="20dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/new_recipe_cl_plus_recipe_image"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:background="@color/colorImageGray">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_plus_gray"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/new_recipe_rv_recipe_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/new_recipe_cl_ingredient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/new_recipe_cl_recipe_image">

                <com.makers.lemoncook.src.VerticalTextView
                    android:id="@+id/new_recipe_vt_ingredient"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginTop="27dp"
                    android:layout_marginLeft="24dp"
                    android:text="@string/newRecipeIngredient"
                    android:textColor="@color/colorMainGray"
                    android:textSize="12sp"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/new_recipe_cl_expandable_btn"
                    android:layout_width="match_parent"
                    android:layout_height="31dp"
                    android:background="@drawable/round_recommend_tap"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="24dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/newRecipeRecommend"
                            android:textColor="@color/colorWhite"
                            android:textSize="13sp"></TextView>

                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:id="@+id/new_recipe_ll_expandable"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/round_recommend_content"
                    app:layout_constraintTop_toBottomOf="@+id/new_recipe_cl_expandable_btn"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="24dp">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/new_recipe_rv_recommend"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="34dp"
                        android:background="@drawable/round_all_put_btn"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="12dp"
                        android:text="@string/newRecipeAllPut"
                        android:textColor="@color/colorSplashTextBlack"
                        android:textSize="13sp"
                        android:layout_marginLeft="17dp"
                        android:layout_marginRight="17dp"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/new_recipe_ll_dynamic_area"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/new_recipe_ll_expandable"
                    android:orientation="vertical"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginTop="4dp"/>
                
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/new_recipe_cl_dynamic_plus_btn"
                    android:layout_width="match_parent"
                    android:layout_height="28dp"
                    app:layout_constraintTop_toBottomOf="@+id/new_recipe_ll_dynamic_area"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="59dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/radius_4dp_gray">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_plus_yellow"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/new_recipe_btn_start"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@drawable/round_fill_lemon"
                app:layout_constraintTop_toBottomOf="@+id/new_recipe_cl_ingredient"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="48dp"
                android:layout_marginTop="30dp"
                android:textColor="@color/colorWhite"
                android:textSize="17sp"
                android:text="@string/newRecipeStart"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>